# EventHorizon

./: .env.example  .env.supabase.example  .gitignore  CHANGELOG.md  CHECK_OAUTH_SETUP.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_OAUTH_DEBUG.md  GITHUB_OAUTH_QUICKFIX.md  GITIGNORE_CLEANUP.md  LICENSE  LICENSE_IMPLEMENTATION_REPORT.md  NEXT_STEPS.md  OAUTH_FINAL_DEBUG.md  OAUTH_FLOW_EXPLAINED.md  PRESENTATION_NOTES.md  Procfile  README.md  SETUP_COMPLETE.md  SUPABASE_AUTH_SETUP.md  SUPABASE_SETUP_GUIDE.md  TEST_CREDENTIALS.md  UPDATE_SUMMARY.md  VERCEL_DEPLOYMENT_FIXED.md  VERCEL_SETUP.md  WEB3_WALLET_AUTH.md  build.sh  build_files.sh  cookies.txt  create_superuser.py  gunicorn_config.py  init_project.py  main.py  manage.py  migrate_media_to_s3.py  package-lock.json  package.json  pyproject.toml  (+6 more)
EventHorizon/: __init__.py  asgi.py  context_processors.py  hashers.py  settings.py  urls.py  wsgi.py
bootstrap/: app.php
config/: app.php  database.php  services.php
docs/: DEPLOYMENT_FILES.md  SEO_IMPLEMENTATION_SUMMARY.md  UPTIME_MONITORING.md  _config.yml  documentation.md  index.md  seo.md  technical_quirks.md  uv-vs-pip.md
events/: __init__.py  admin.py  api_views.py  apps.py  models.py  notifications.py  serializers.py  sitemaps.py  tests.py  urls.py  utils.py  views.py  webhook_utils.py
home/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
routes/: web.php
storage/: README.md  __init__.py  base.py  factory.py  s3.py  utils.py
templates/: base.html  home.html  plain_base.html  robots.txt
users/: admin.py  apps.py  (+9 more)
(+129 files in other folders)
