[project]
name = "eventhorizon"
version = "0.1.0"
description = "A futuristic event management platform with OAuth2, API authentication, and modern UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-allauth[socialaccount]>=65.13.1",
    "django-rest-framework>=0.1.0",
    "python-dotenv>=1.2.1",
    "tzdata>=2025.2",
    "django-oauth-toolkit",
    "djangorestframework",
    "markdown",
    "django-filter",
    "django-rest-knox>=5.0.2",
    "django-cors-headers>=4.9.0",
    "pillow>=12.0.0",
    "cryptography>=46.0.3",
    "django-storages[s3]>=1.14.4",
    "boto3>=1.35.0",
    "dj-database-url>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "requests>=2.31.0",
    "gunicorn[gevent]>=21.2.0",
    "whitenoise>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
]
